integrates\fix(front): #2358.3 overlaping select menu
Former-commit-id: 8f3a8b60ca932843fbab436a0b608d493b00f78e

--- a/front/src/scenes/Dashboard/components/ContentTab/index.css
+++ b/front/src/scenes/Dashboard/components/ContentTab/index.css
@@ -47,7 +47,7 @@
     padding-top: 8px;
     position: sticky;
     top: 45px;
-    z-index: 4;
+    z-index: 3;
   }
 }
 
